r2_motion/log/build_2025-05-23_16-07-22/sensors/stdout_stderr.log
running egg_info
writing ../../build/sensors/sensors.egg-info/PKG-INFO
writing dependency_links to ../../build/sensors/sensors.egg-info/dependency_links.txt
writing entry points to ../../build/sensors/sensors.egg-info/entry_points.txt
writing requirements to ../../build/sensors/sensors.egg-info/requires.txt
writing top-level names to ../../build/sensors/sensors.egg-info/top_level.txt
reading manifest file '../../build/sensors/sensors.egg-info/SOURCES.txt'
writing manifest file '../../build/sensors/sensors.egg-info/SOURCES.txt'
running build
running build_py
copying sensors/sensors.py -> /home/adam/r2_motion/build/sensors/build/lib/sensors
running install
running install_lib
copying /home/adam/r2_motion/build/sensors/build/lib/sensors/sensors.py -> /home/adam/r2_motion/install/sensors/lib/python3.10/site-packages/sensors
byte-compiling /home/adam/r2_motion/install/sensors/lib/python3.10/site-packages/sensors/sensors.py to sensors.cpython-310.pyc
  File "/home/adam/r2_motion/install/sensors/lib/python3.10/site-packages/sensors/sensors.py", line 96
    self.current_sensor_data{
                            ^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/home/adam/r2_motion/install/sensors/lib/python3.10/site-packages/sensors-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/sensors/sensors.egg-info to /home/adam/r2_motion/install/sensors/lib/python3.10/site-packages/sensors-0.0.0-py3.10.egg-info
running install_scripts
Installing sensors script to /home/adam/r2_motion/install/sensors/lib/sensors
writing list of installed files to '/home/adam/r2_motion/build/sensors/install.log'
